--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,15 @@
 .box {
   height: 50px;
   background-color: rgb(11, 64, 180);
+  padding: 10px;
+
+}
+
+.box > .row {
+  height: 100%;
 }
 
 .box-green {
   background-color: lime;
-  height: 25px;
-}
-
-.padding {
-  padding: 12px;
+  height: 100%;
 }
